# fast-blurhash

./: .bumpversion.toml  .gitignore  Cargo.toml  README.md  noxfile.py  pyproject.toml
.github/actions/set-up-uv/: action.yml
.github/workflows/: ci.yml  test.yml
fast_blurhash/: __init__.py
src/: lib.rs
tests/: conftest.py  decode.py  encode.py  utils.py
tests/assets/: __init__.py
